# Iizardcode

./: .gitignore  .pre-commit-config.yaml  DevCenter.spec  README.md  build_exe.bat  config.json  hardware.py  historique_ia.json  main_gui.py  main_gui.spec  profiles.json  project_utils.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
cartes/bpi/: README.md
cartes/esp32/: README.md
cartes/esp32_c6/: README.md
cartes/esp32_p4/: README.md
cartes/raspberry_pi/: README.md
tests/: test_hardware.py  test_main_gui.py  test_project_utils.py
